# njuka-webapp-frontend

./: .env  .firebaserc  .gitignore  cardcomponent.tsx  example.css  gametablelogic.tsx  gametablestyle.css  main.py  package-lock.json  package.json  phase2-sprint-plan.json  render.yaml  requirements.txt  roadmap.json  tailwind.config.js  to do.txt  tsconfig.app.json  vite.config.ts
.firebase/: hosting.LmZpcmViYXNlXG5qdWthLWtpbmdcaG9zdGluZw.cache  hosting.ZGlzdA.cache
backend/njuka-webapp-backend/: main.py  pyproject.toml  requirements.txt
docs/: commands.md  njuka-ui-ux-assessment.md  phase2-sprint-report.md  phase2.md  roadmap.md  rubric.md  sprint1-completion-report.md  sprint2-completion-report.md  sprint2-progress-report.md
njuka-webapp-frontend/src/: App.css
project/: README.md  index.html  package-lock.json  package.json
project/src/: App copy.tsx
public/sounds/: README.md
src/: .stylelintrc.js  App.css  App.tsx  index.css  page.tsx  tailwind.config.js
src/components/: CPUGamePage.tsx  Card.tsx  ConnectionStatus.css  ConnectionStatus.tsx  EnhancedBottomMenu.tsx  ErrorModal.css  ErrorModal.tsx  GameApp.tsx  GameOverModal.css  GameOverModal.tsx  GameTable.css  GameTable.tsx  HomePage.tsx  LazyGameOverModal.tsx  LazyGameTable.tsx  LazyTutorialModal.tsx  LoadingOverlay.css  LoadingOverlay.tsx  Modal.css  Modal.tsx  MultiplayerPage.tsx  RulesPage.tsx  TutorialModal.css  TutorialModal.tsx
src/contexts/: GameContext.tsx  WebSocketContext.tsx
src/hooks/: useRealTimeGameState.ts  useRealTimeLobbyState.ts  useWebSocket.ts
src/routes/: GameRoomPage.tsx  (+5 more)
(+48 files in other folders)
