[tool.poetry]
name = "njuka-backend"
version = "0.1.0"
description = "Njuka game backend"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"